# langchain-practice

./: .gitignore  chain.py  conversation.py  output_parser.py  prompt_template.py  pyproject.toml
books/: book1.txt  book2.txt
rag/: basics.py
src/agents_and_tools/: basic.py  conversation.py  tool_base_tool.py  tool_constructor.py  tool_decorator.py
src/components/: chain.py  conversation.py  output_parser.py  prompt_template.py
src/config/: llm_config.py
src/rag/: basics.py  rag_with_metadata.py  retriver.py  text_splitter.py
