[project]
name = "langchain-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-groq",
    "python-dotenv",
    "pydantic",
    "langchain-google-genai",
    "langchain-chroma",
    "sentence-transformers",
    "tiktoken"
    ]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"